# inauth-code-challenge

./: LICENSE.txt  build.gradle
apk/prod/release/: output.json
app/: build.gradle  proguard-rules.pro  proguardTest-rules.pro
app/src/androidTest/java/com/inauth/codechallenge/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/native-lib/: CMakeLists.txt  CryptoHelper.cpp  CryptoHelper.h  native-lib.cpp
app/src/main/java/com/inauth/codechallenge/: Event.kt  Injection.kt  ViewModelFactory.kt
app/src/main/java/com/inauth/codechallenge/data/: AppsInfo.kt  GifObject.kt
app/src/main/java/com/inauth/codechallenge/data/source/: AppDataSource.kt  AppRepository.kt
app/src/main/java/com/inauth/codechallenge/tasks/: ApplicationsInfoProvider.kt  LocationInfoProvider.kt  PrettyJsonProvider.kt  TasksActivity.kt  TasksFragment.kt  TasksViewModel.kt  VisibilityType.kt
app/src/main/java/com/inauth/codechallenge/util/: AppCompatActivityExt.kt  AppExecutors.kt  FileDirSizeCalculator.kt  IOThreadExecutor.kt  ViewExt.kt
app/src/main/res/drawable-anydpi/: ic_location_failed.xml  ic_primary.xml  ic_search.xml  ic_storage.xml
app/src/main/res/layout/: apps_info_viewer.xml  empty_view.xml  list_item.xml  location_info_view.xml  pretty_json_viewer.xml  tasks_act.xml  tasks_frag.xml
app/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  styles.xml
app/src/test/java/com/inauth/codechallenge/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
